[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/gui_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/MainOptions.gd" type="Script" id=3]
[ext_resource path="res://assets/kurland_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui_lang_en.png" type="Texture" id=5]
[ext_resource path="res://assets/ui_lang_lv.png" type="Texture" id=6]
[ext_resource path="res://assets/ui_lang_ru.png" type="Texture" id=7]
[ext_resource path="res://assets/ui_lang_fr.png" type="Texture" id=8]
[ext_resource path="res://assets/ui_lang_de.png" type="Texture" id=9]
[ext_resource path="res://scenes/PreAlphaText.tscn" type="PackedScene" id=10]

[node name="MainOptions" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreAlphaText" parent="." instance=ExtResource( 10 )]

[node name="OptionsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_top = 60.0
margin_right = 640.0
margin_bottom = 111.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 139.0
margin_right = 136.0
margin_bottom = 304.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Menu"]
margin_top = 59.0
margin_right = 272.0
margin_bottom = 110.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Menu"]
margin_top = 114.0
margin_right = 272.0
margin_bottom = 165.0
text = "Back"

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.0
margin_top = -207.0
margin_right = 415.0
margin_bottom = 162.0
theme = ExtResource( 2 )
custom_constants/top_margin = 0
custom_constants/side_margin = 1
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 43.0
margin_right = -2.0
margin_bottom = -2.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -116.0
margin_right = 232.0
margin_bottom = 116.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 43.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TabContainer/Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -97.5
margin_right = 128.0
margin_bottom = 97.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Video/VBox"]
margin_right = 256.0
margin_bottom = 26.0
text = "Resolution:"

[node name="Option_Resolution" type="OptionButton" parent="TabContainer/Video/VBox"]
margin_top = 30.0
margin_right = 256.0
margin_bottom = 85.0
toggle_mode = false
text = "640x360"
align = 1
items = [ "640x360", null, false, 0, null, "1280x720", null, false, 1, null, "1920x1080", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_FS" type="CheckBox" parent="TabContainer/Video/VBox"]
margin_top = 89.0
margin_right = 256.0
margin_bottom = 140.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_Vsync" type="CheckBox" parent="TabContainer/Video/VBox"]
margin_top = 144.0
margin_right = 256.0
margin_bottom = 195.0
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 43.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TabContainer/Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.0
margin_top = -25.5
margin_right = 13.0
margin_bottom = 25.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Audio/VBox"]
visible = false
margin_right = 157.0
margin_bottom = 26.0
text = "General:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS_General" type="HSlider" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 30.0
margin_right = 157.0
margin_bottom = 46.0
value = 100.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 50.0
margin_right = 157.0
margin_bottom = 76.0
text = "Music:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS_Music" type="HSlider" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 80.0
margin_right = 157.0
margin_bottom = 96.0
value = 100.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 100.0
margin_right = 157.0
margin_bottom = 126.0
text = "Sound Effects:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HS_SE" type="HSlider" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 130.0
margin_right = 157.0
margin_bottom = 146.0
value = 100.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_Mute" type="CheckBox" parent="TabContainer/Audio/VBox"]
visible = false
margin_top = 150.0
margin_right = 157.0
margin_bottom = 201.0
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Languages" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 43.0
margin_right = -2.0
margin_bottom = -2.0

[node name="HBox" type="HBoxContainer" parent="TabContainer/Languages"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.5
margin_top = -92.5
margin_right = 370.5
margin_bottom = 92.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnglishBox" type="HBoxContainer" parent="TabContainer/Languages/HBox"]
margin_right = 145.0
margin_bottom = 185.0

[node name="VList" type="VBoxContainer" parent="TabContainer/Languages/HBox/EnglishBox"]
margin_right = 145.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_EN" type="TextureRect" parent="TabContainer/Languages/HBox/EnglishBox/VList"]
margin_right = 145.0
margin_bottom = 100.0
texture = ExtResource( 5 )

[node name="English" type="Label" parent="TabContainer/Languages/HBox/EnglishBox/VList"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 130.0
text = "English"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="HBoxContainer" parent="TabContainer/Languages/HBox/EnglishBox/VList"]
margin_top = 134.0
margin_right = 145.0
margin_bottom = 185.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radio_EN" type="CheckBox" parent="TabContainer/Languages/HBox/EnglishBox/VList/center"]
margin_left = 48.0
margin_right = 96.0
margin_bottom = 51.0
disabled = true
pressed = true
align = 1

[node name="RussianBox" type="HBoxContainer" parent="TabContainer/Languages/HBox"]
margin_left = 149.0
margin_right = 294.0
margin_bottom = 185.0

[node name="VList" type="VBoxContainer" parent="TabContainer/Languages/HBox/RussianBox"]
margin_right = 145.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_RU" type="TextureRect" parent="TabContainer/Languages/HBox/RussianBox/VList"]
margin_right = 145.0
margin_bottom = 100.0
texture = ExtResource( 7 )

[node name="Russian" type="Label" parent="TabContainer/Languages/HBox/RussianBox/VList"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 130.0
text = "Русский"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="HBoxContainer" parent="TabContainer/Languages/HBox/RussianBox/VList"]
margin_top = 134.0
margin_right = 145.0
margin_bottom = 134.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radio_RU" type="CheckBox" parent="TabContainer/Languages/HBox/RussianBox/VList/center"]
visible = false
margin_left = 48.0
margin_right = 96.0
margin_bottom = 51.0
align = 1

[node name="GermanBox" type="HBoxContainer" parent="TabContainer/Languages/HBox"]
margin_left = 298.0
margin_right = 443.0
margin_bottom = 185.0

[node name="VList" type="VBoxContainer" parent="TabContainer/Languages/HBox/GermanBox"]
margin_right = 145.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_DE" type="TextureRect" parent="TabContainer/Languages/HBox/GermanBox/VList"]
margin_right = 145.0
margin_bottom = 100.0
texture = ExtResource( 9 )

[node name="German" type="Label" parent="TabContainer/Languages/HBox/GermanBox/VList"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 130.0
text = "Deutsch"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="HBoxContainer" parent="TabContainer/Languages/HBox/GermanBox/VList"]
margin_top = 134.0
margin_right = 145.0
margin_bottom = 134.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radio_DE" type="CheckBox" parent="TabContainer/Languages/HBox/GermanBox/VList/center"]
visible = false
margin_left = 48.0
margin_right = 96.0
margin_bottom = 51.0
align = 1

[node name="FranceBox" type="HBoxContainer" parent="TabContainer/Languages/HBox"]
margin_left = 447.0
margin_right = 592.0
margin_bottom = 185.0

[node name="VList" type="VBoxContainer" parent="TabContainer/Languages/HBox/FranceBox"]
margin_right = 145.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_FR" type="TextureRect" parent="TabContainer/Languages/HBox/FranceBox/VList"]
margin_right = 145.0
margin_bottom = 100.0
texture = ExtResource( 8 )

[node name="France" type="Label" parent="TabContainer/Languages/HBox/FranceBox/VList"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 130.0
text = "Français"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="HBoxContainer" parent="TabContainer/Languages/HBox/FranceBox/VList"]
margin_top = 134.0
margin_right = 145.0
margin_bottom = 134.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radio_FR" type="CheckBox" parent="TabContainer/Languages/HBox/FranceBox/VList/center"]
visible = false
margin_left = 48.0
margin_right = 96.0
margin_bottom = 51.0
align = 1

[node name="LatvianBox" type="HBoxContainer" parent="TabContainer/Languages/HBox"]
margin_left = 596.0
margin_right = 741.0
margin_bottom = 185.0

[node name="VList" type="VBoxContainer" parent="TabContainer/Languages/HBox/LatvianBox"]
margin_right = 145.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_LV" type="TextureRect" parent="TabContainer/Languages/HBox/LatvianBox/VList"]
margin_right = 145.0
margin_bottom = 100.0
texture = ExtResource( 6 )

[node name="Latvian" type="Label" parent="TabContainer/Languages/HBox/LatvianBox/VList"]
margin_top = 104.0
margin_right = 145.0
margin_bottom = 130.0
text = "Latviešu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="HBoxContainer" parent="TabContainer/Languages/HBox/LatvianBox/VList"]
margin_top = 134.0
margin_right = 145.0
margin_bottom = 134.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radio_LV" type="CheckBox" parent="TabContainer/Languages/HBox/LatvianBox/VList/center"]
visible = false
margin_left = 48.0
margin_right = 96.0
margin_bottom = 51.0
align = 1
[connection signal="pressed" from="Menu/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="button_up" from="Menu/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="item_selected" from="TabContainer/Video/VBox/Option_Resolution" to="." method="_on_Option_Resolution_item_selected"]
[connection signal="toggled" from="TabContainer/Video/VBox/CB_FS" to="." method="_on_CB_FS_toggled"]
[connection signal="toggled" from="TabContainer/Video/VBox/CB_Vsync" to="." method="_on_CB_Vsync_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/VBox/HS_General" to="." method="_on_HS_General_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBox/HS_Music" to="." method="_on_HS_Music_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBox/HS_SE" to="." method="_on_HS_SE_value_changed"]
[connection signal="toggled" from="TabContainer/Audio/VBox/CB_Mute" to="." method="_on_CB_Mute_toggled"]
